# pattern-matching

./: CMakeLists.txt  README.md
res/: lorem_ipsum.txt  lorem_ipsum_matching.txt  lorem_ipsum_nonmatching.txt  matching.txt
res/books/: lorem_ipsum.txt  matching-pride.txt  matching.txt
res/kernels/: kernel_compare.cl  naive.cl  winnowing.cl
scripts/: run-tests-mpi.sh  run-tests.sh
src/: Algorithm.cpp  Algorithm.hpp  AlgorithmOnGPU.cpp  AlgorithmOnGPU.hpp  Interpreter.cpp  Interpreter.hpp  MultihreadedAlgorithm.cpp  MultihreadedAlgorithm.hpp  MultithreadedNaiveAlgorithm.cpp  MultithreadedNaiveAlgorithm.hpp  MultithreadedWinnowingAlgorithm.cpp  MultithreadedWinnowingAlgorithm.hpp  NaiveAlgorithm.cpp  NaiveAlgorithm.hpp  NaiveAlgorithmOnGPU.cpp  NaiveAlgorithmOnGPU.hpp  NaiveAlgorithmWithMPI.cpp  NaiveAlgorithmWithMPI.hpp  ParallelAlgorithm.cpp  ParallelAlgorithm.hpp  ParallelNaiveAlgorithm.cpp  ParallelNaiveAlgorithm.hpp  ParallelWinnowingAlgorithm.cpp  ParallelWinnowingAlgorithm.hpp  SequentialNaiveAlgorithm.cpp  SequentialNaiveAlgorithm.hpp  Text.cpp  Text.hpp  WinnowingAlgorithm.cpp  WinnowingAlgorithm.hpp  WinnowingAlgorithmOnGPU.cpp  WinnowingAlgorithmOnGPU.hpp  WinnowingAlgorithmWithMPI.cpp  WinnowingAlgorithmWithMPI.hpp  main.cpp  utils.hpp
